2015-08-18  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: revert 36222, not the correct fix.

	* 36222: Src/Modules/datetime.c: unmetafy output from strftime.

	* 36218: Src/files.c: use unmetafied file name for mkdir()
	system call.

	* 36216: Doc/Zsh/zle.yo: Simpler saving of UNDO_LIMT_NO.

2015-08-17  Barton E. Schaefer  <schaefer@zsh.org>

	* 36212: Functions/Zle/narrow-to-region: save and restore HISTNO
	along with other editor state, for sanity of "zle undo"

2015-08-18  brian m. carlson  <sandals@crustytoothpaste.net>

	* 36209: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info: avoid grep error message when file is missing

2015-08-17  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Linux/Command/_sshfs: _sshfs: Fix
	completion of options with values

	* 36158: Completion/Linux/Command/_sshfs: _sshfs: Fix completion
	of and after -o

	* 36109: Src/Zle/zle_misc.c: bracketed-paste: change quoting
	style

	* 36186: Etc/FAQ.yo: FAQ (3.24): Update for bracketed paste

2015-08-17  Mikael Magnusson  <mikachu@gmail.com>

	* 36172: Completion/Unix/Command/_imagemagick: Use $formats a
	bit more correctly

2015-08-17  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted (cf. 36200): Completion/Base/Completer/_expand: back out
	backslash handling change from 34961.

2015-08-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Doc/Zsh/contrib.yo: use of $f in zmv.

2015-08-17  Oliver Kiddle <opk@zsh.org>

	* 36165: Completion/Unix/Type/_files: simplify file-patterns
	default to a single pattern

2015-08-17  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Functions/Zle/url-quote-magic: mention
	bracketed-paste-magic in comment

2015-08-17  Mikael Magnusson  <mikachu@gmail.com>

	* 36177: Completion/Zsh/Command/_setopt: complete printexitvalue
	both ways

	* 36183: Completion/Unix/Command/_ssh: update to 7.0

2015-08-16  Barton E. Schaefer  <schaefer@zsh.org>
